# Numerical-Analysis

./: package-lock.json
backend/: main.py  pyproject.toml  requirements.txt  setup.cfg
backend/InterpolationMethods/: vandermonde.py
backend/LinearSystemsMethods/: comparisonLSM.py  gauss_seidel.py  jacobi.py
backend/RootFindingMethods/: secante.py
backend/methods/: bisection.py  lagrange.py  newton.py  newton_int.py  punto_fijo.py  regla_falsa.py  secante.py  sor.py  spline.py  symbolic.py
backend/routers/: comparison.py  interpolation.py  interpolation_comparison.py  plotting.py  root_comparison.py  roots.py  system_of_equations.py
backend/scripts/: dev  format
backend/utils/: errors.py  parsing.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: BisectionForm.css  BisectionForm.jsx  ComparisionLSM.jsx  DesmosGraph.jsx  FalseRuleForm.jsx  FixedPointForm.jsx  GaussSeidelForm.jsx  HelpPage.jsx  InterpolationComparison.jsx  JacobiForm.jsx  LagrangeForm.jsx  NewtonForm.jsx  RootComparison.jsx  SORForm.jsx  SecanteForm.css  SecanteForm.jsx  SplineForm.jsx  VandermondeForm.jsx
frontend/src/services/: api.js
