[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["John Alejandro Gonzalez <john.gonzalez@ideaslab.com.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.0"
scipy = "^1.11.2"
sympy = "^1.12"
uvicorn = "^0.23.2"
fastapi = {extras = ["all"], version = "^0.103.1"}
pydantic = "^2.3.0"
antlr4-python3-runtime = "4.11"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
